[gd_scene load_steps=9 format=2]

[ext_resource path="res://StabAim.png" type="Texture" id=1]
[ext_resource path="res://StabCrosshair.png" type="Texture" id=2]
[ext_resource path="res://StabCrosshair.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=5]
radius = 32.0

[sub_resource type="Animation" id=1]
resource_name = "Appear"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("Crosshair:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.501961 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_attacking"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "Attack"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("OuterPivot/InnerPivot/Aim:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 0.9, 1.3 ),
"transitions": PoolRealArray( 1, -2, -2, 1 ),
"update": 0,
"values": [ Vector2( -128, 0 ), Vector2( -128, 0 ), Vector2( -192, 0 ), Vector2( 96, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OuterPivot/InnerPivot/Aim:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1.7, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("OuterPivot/InnerPivot/Aim:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3, 1.5 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ 0.0, 1080.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Crosshair:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 1.7, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.501961 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:attackReady")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("OuterPivot/InnerPivot:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ 0.0, -45.0 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("OuterPivot/InnerPivot/Aim:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -128, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OuterPivot/InnerPivot/Aim:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Crosshair:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("OuterPivot/InnerPivot/Aim:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:attackReady")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("OuterPivot/InnerPivot:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 8.0

[node name="StabCrosshair" type="Node2D"]
script = ExtResource( 3 )

[node name="Crosshair" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 2 )

[node name="Area" type="Area2D" parent="Crosshair"]

[node name="Shape" type="CollisionShape2D" parent="Crosshair/Area"]
shape = SubResource( 5 )

[node name="Anim" type="AnimationPlayer" parent="."]
autoplay = "Appear"
anims/Appear = SubResource( 1 )
anims/Attack = SubResource( 3 )
anims/RESET = SubResource( 2 )

[node name="OuterPivot" type="Node2D" parent="."]

[node name="InnerPivot" type="Node2D" parent="OuterPivot"]

[node name="Aim" type="Sprite" parent="OuterPivot/InnerPivot"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -128, 0 )
texture = ExtResource( 1 )

[node name="Area" type="Area2D" parent="OuterPivot/InnerPivot/Aim"]

[node name="Shape" type="CollisionShape2D" parent="OuterPivot/InnerPivot/Aim/Area"]
shape = SubResource( 4 )

[connection signal="area_entered" from="OuterPivot/InnerPivot/Aim/Area" to="." method="_on_area_entered"]
